# cactus_rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md  bump-version.py
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build-crate.yml  build-riscv64.yml  build-wheels.yml
crates/cactus-bls/: Cargo.toml
crates/cactus-bls/benches/: cache.rs  derive_key.rs  parse.rs  sign.rs  verify.rs
crates/cactus-bls/fuzz/: Cargo.toml
crates/cactus-bls/fuzz/fuzz_targets/: blspy-fidelity.rs  derive.rs
crates/cactus-bls/src/: bls_cache.rs  error.rs  gtelement.rs  public_key.rs  secret_key.rs  signature.rs
crates/cactus-client/: Cargo.toml
crates/cactus-client/src/: error.rs  peer.rs  utils.rs
crates/cactus-consensus/: Cargo.toml
crates/cactus-consensus/benches/: merkle-set.rs  run-generator.rs
crates/cactus-consensus/fuzz/: Cargo.toml
crates/cactus-consensus/fuzz/fuzz_targets/: additions-and-removals.rs  deserialize-proof.rs  fast-forward.rs  merkle-set.rs  parse-cond-args.rs  parse-conditions.rs  parse-spend-id.rs  parse-spend.rs  parse-spends.rs  process-spend.rs  puzzle-coin-solution.rs  run-generator.rs  sanitize-uint.rs  solution-generator.rs
crates/cactus-consensus/src/: allocator.rs  consensus_constants.rs  error.rs  fast_forward.rs  generator_rom.rs  merkle_set.rs  merkle_tree.rs  spendbundle_conditions.rs  spendbundle_validation.rs
crates/cactus-protocol/: Cargo.toml
crates/cactus-protocol/fuzz/: Cargo.toml
crates/cactus-protocol/fuzz/fuzz_targets/: parse-foliage.rs  parse-full-block.rs  parse-header-block.rs  parse-program.rs  parse-tx-info.rs  spend-bundle.rs  streamable.rs
crates/cactus-protocol/src/: block_record.rs  bytes.rs  cactus_protocol.rs  classgroup.rs  coin.rs  coin_spend.rs  coin_state.rs  end_of_sub_slot_bundle.rs  fee_estimate.rs  foliage.rs  full_node_protocol.rs  fullblock.rs  header_block.rs  lib.rs  peer_info.rs  pool_target.rs  program.rs  proof_of_space.rs  reward_chain_block.rs  slots.rs  spend_bundle.rs  sub_epoch_summary.rs  unfinished_block.rs  unfinished_header_block.rs  vdf.rs  wallet_protocol.rs  weight_proof.rs
crates/cactus-puzzles/: Cargo.toml
crates/cactus-puzzles/fuzz/: Cargo.toml
crates/cactus-puzzles/fuzz/fuzz_targets/: roundtrip.rs
crates/cactus-puzzles/src/: derive_synthetic.rs  proof.rs
crates/cactus-puzzles/src/puzzles/: cat.rs  did.rs  nft.rs  offer.rs  singleton.rs  standard.rs
crates/cactus-secp/: Cargo.toml
crates/cactus-secp/src/secp256k1/: public_key.rs
crates/cactus-secp/src/secp256r1/: public_key.rs
crates/cactus-sha2/: Cargo.toml
crates/cactus-ssl/: Cargo.toml
crates/cactus-ssl/src/: ca.rs  lib.rs
crates/cactus-tools/: Cargo.toml
crates/cactus-tools/src/: visit_spends.rs
crates/cactus-traits/: Cargo.toml
crates/cactus-traits/src/: int.rs  lib.rs  streamable.rs
crates/cactus_py_streamable_macro/: Cargo.toml
crates/cactus_py_streamable_macro/src/: lib.rs
crates/cactus_streamable_macro/: Cargo.toml
crates/cactus_streamable_macro/src/: lib.rs
crates/clvm-derive/: Cargo.toml
crates/clvm-traits/: Cargo.toml
crates/clvm-traits/docs/: derive_macros.md
crates/clvm-traits/src/: from_clvm.rs  to_clvm.rs
crates/clvm-utils/: Cargo.toml
crates/clvm-utils/fuzz/: Cargo.toml
crates/clvm-utils/fuzz/fuzz_targets/: curry.rs  tree-hash.rs
crates/clvm-utils/src/: tree_hash.rs
src/: lib.rs
tests/: merkle_set.py  run.py  run_gen.py  test-generators.py  test_additions_and_removals.py  test_block_record_fidelity.py  test_blscache.py  test_blspy_fidelity.py  test_coin.py  test_fast_forward.py  test_get_puzzle_and_solution.py  test_merkle_set.py  test_program.py  test_program_fidelity.py  test_replace.py  test_run_block_generator.py  test_spend_bundle.py  test_streamable.py  test_struct_stream.py  test_tree_hash.py  test_validate_clvm_and_signature.py
wasm/: Cargo.toml  README.md
wheel/: Cargo.toml  README.md  generate_type_stubs.py  pyproject.toml  stubtest.allowlist  stubtest.allowlist.3-11-plus
wheel/python/cactus_rs/: __init__.py  cactus_rs.pyi  spend.py
wheel/src/: api.rs  run_generator.rs  run_program.rs
