[package]
name = "cactus_wasm"
version = "0.17.0"
authors = ["Dommer <dommer@cactus-network.net>"]
edition = "2021"
license = "Apache-2.0"
description = "Code useful for implementing cactus consensus."
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"
readme = "README.md"

[lints]
workspace = true

[lib]
name = "cactus_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { workspace = true }
