[package]
name = "cactus_rs"
version = "0.17.0"
authors = ["Dommer <hdommer@cactus-network.net>"]
edition = "2021"
license = "Apache-2.0"
description = "Code useful for implementing cactus consensus."
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"
readme = "README.md"

[lints]
workspace = true

[lib]
name = "cactus_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[package.metadata.maturin]
python-source = "python"

# cactus-client and cactus-ssl are needed for the wheel sdist to work correctly
# ignore any errors from machete about unused dependencies
[package.metadata.cargo-machete]
ignored = ["cactus-client", "cactus-ssl"]

[dependencies]
clvmr = { workspace = true }
hex = { workspace = true }
pyo3 = { workspace = true, features = ["multiple-pymethods"] }
cactus-consensus = { workspace = true, features = ["py-bindings"] }
cactus-bls = { workspace = true, features = ["py-bindings"]  }
cactus-protocol = { workspace = true, features = ["py-bindings"]  }
clvm-utils = { workspace = true }
cactus-ssl = { workspace = true }
cactus-client = { workspace = true }
cactus-traits = { workspace = true }
