[package]
name = "cactus-consensus"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Cactus blockchain full node"
authors = ["Dommer" <dommer@cactus-network.net>"]
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"

[lints]
workspace = true

[features]
py-bindings = [
    "dep:pyo3",
    "dep:cactus_py_streamable_macro",
    "cactus-traits/py-bindings",
    "cactus-protocol/py-bindings"
]

[dependencies]
clvmr = { workspace = true }
hex = { workspace = true }
pyo3 = { workspace = true, optional = true }
cactus_streamable_macro = { workspace = true }
cactus_py_streamable_macro = { workspace = true, optional = true }
clvm-utils = { workspace = true }
cactus-sha2 = { workspace = true }
cactus-traits = { workspace = true }
clvm-traits = { workspace = true }
cactus-protocol = { workspace = true }
cactus-puzzles = { workspace = true }
cactus-bls = { workspace = true }
hex-literal = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
num-traits = { workspace = true }
rstest = { workspace = true }
text-diff = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true, features = [ "small_rng" ] }

[lib]
bench = false

[[bench]]
name = "run-generator"
harness = false

[[bench]]
name = "tree-hash"
harness = false

[[bench]]
name = "merkle-set"
harness = false
