[package]
name = "cactus-secp"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Secp256k1 and secp256r1 types for Cactus"
authors = ["Brandon Haggstrom <b.haggstrom@cactus-network.net>"]
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"

[lints]
workspace = true

[features]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
k256 = { workspace = true }
p256 = { workspace = true }
hex = { workspace = true }
cactus-sha2= { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
