[package]
name = "cactus-sha2"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "A common wrapper around OpenSSL and sha2 implementations of sha256."
authors = ["Brandon Haggstrom <b.haggstrom@cactus-network.net>"]
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"

[lints]
workspace = true

[features]
openssl = ["dep:openssl"]

[dependencies]
sha2 = { workspace = true }
openssl = { workspace = true, optional = true }
