[package]
name = "cactus-ssl"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Cactus SSL X.509 certificate generator"
authors = ["Brandon Haggstrom <b.haggstrom@cactus-network.net>"]
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"

[lints]
workspace = true

[dependencies]
lazy_static = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true, features = ["pem", "x509-parser"] }
rsa = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
