[package]
name = "cactus-traits"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Cactus traits for Streamable types (cactus's serialization format)"
authors = ["Dommer <dommer@cactus-network.net>"]

[lints]
workspace = true

[features]
py-bindings = ["dep:pyo3"]

[dependencies]
cactus-sha2 = { workspace = true }
pyo3 = { workspace = true, features = ["multiple-pymethods"], optional = true }
cactus_streamable_macro = { workspace = true }
thiserror = { workspace = true }
