[package]
name = "cactus_streamable_macro"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Streamable derive macro for serializing/deserializing types in Cactus protocol format"
authors = ["Dommer<dommer@cactus-network.net>"]
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
