[package]
name = "clvm-derive"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for implementing CLVM traits."
authors = ["Brandon Haggstrom <b.haggstrom@cactus-network.net>"]
homepage = "https://github.com/Cactus-Network/cactus_rs"
repository = "https://github.com/Cactus-Network/cactus_rs"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
